--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -13,7 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: haskell/actions/setup@v1.2
+    - uses: haskell/actions/setup@v2
+      with:
+          ghc-version: "latest"
+          cabal-version: "latest"
     - name: Cache
       uses: actions/cache@v1
       env:
