--- a/matrx.cabal
+++ b/matrx.cabal
@@ -18,5 +18,6 @@ library
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.15.1.0
+                    , primitive
     hs-source-dirs:   src
     default-language: Haskell2010
