--- a/neo.cabal
+++ b/neo.cabal
@@ -16,8 +16,7 @@ extra-source-files: CHANGELOG.md
 library
     exposed-modules:  
         Data.Matrix
-        Data.Matrix.Class
-        Data.Matrix.Internal
+        Data.NaiveMatrix
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.15.1.0
