--- a/neo.cabal
+++ b/neo.cabal
@@ -15,7 +15,7 @@ extra-source-files: CHANGELOG.md
 
 library
     exposed-modules:  
-        Data.Matrix
+        Data.IMatrix
         Data.NaiveMatrix
     -- other-modules:
     -- other-extensions:
