--- a/neo.cabal
+++ b/neo.cabal
@@ -15,11 +15,15 @@ extra-source-files: CHANGELOG.md
 
 library
     exposed-modules:  
-        Data.IMatrix
         Data.NaiveMatrix
-    -- other-modules:
+        Data.Matrix
+    other-modules:
+        Data.IMatrix
+        Data.MMatrix
+ 
     -- other-extensions:
+       
     build-depends:    base ^>=4.15.1.0
-                    , primitive
+                    , ghc-prim
     hs-source-dirs:   src
     default-language: Haskell2010
