--- a/neo.cabal
+++ b/neo.cabal
@@ -23,7 +23,7 @@ library
  
     -- other-extensions:
        
-    build-depends:    base ^>=4.15.1.0
+    build-depends:    base >=4 && <5
                     , ghc-prim
     hs-source-dirs:   src
     default-language: Haskell2010
